example/lib/src/l10n/errors/app_mr.arb
{
  "@@locale": "mr",
  "error": "एक त्रुटी झाली",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "अनपेक्षित त्रुटी घडली",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "बग रिपोर्ट यशस्वीपणे पाठविला गेला.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}